Install/Config instructions

--- a/translations/en.json
+++ b/translations/en.json
@@ -3,15 +3,28 @@
     "name": "WhatsApp Notifications",
     "short_description": "Allows to send proactive messages to Whatsapp.",
     "long_description": "",
-    "installation_instructions": "Smooch/Zendesk should provide you the value for each parameter.",
+    "installation_instructions": "Sunshine Conversations/Zendesk should provide you the value for each parameter.",
     "parameters": {
-      "appId" : { "label": "Smooch appID or Channel Framework ID" },
-      "jwt"     : { "label": "Smooch App token" },
-      "integrationId"    : { "label": "WhatsApp Integration ID" },
-      "namespace"    : { "label": "WhatsApp Namespace", "helpText": "The namespace is given by Whatsapp on your WABA." },
-      "templates"    : { "label": "Enabled WA templates", "helpText": "Input the list of WA templates that you want to enable on ZD Support, separated by commas." },
-      "language"    : { "label": "Template language", "helpText": "Language to apply to ALL template (en\\_US or pt\\_BR)" },
-      "notificationAPI"    : { "label": "Notification API enabled", "helpText": "Specify if the Smooch Notification API is enabled for your account." }
+      "appId" : { "label": "Sunshine Conversations ID" , 
+        "helpText": "ID of your app on the Sunshine Conversations dashboard (URL: https://smooch.io)" },
+
+      "jwt"     : { "label": "Sunshine Conversations App token" , 
+        "helpText": "- STEP 1: Go to www.jwt.io\n\n- STEP 2: in header:\n{\n\n\"alg\": \"HS256\",\n \"typ\": \"JWT\",\n\"kid\": \"<<YOUR APP KEY>>\"\n}\n\n- STEP 3: in payload:\n{\n\"scope\": \"app\"\n}\n\n- STEP 4: in signature, put the secret that matches the key you provided in the header\non the left part, you’ll get your token (jwt)"},
+
+      "integrationId"    : { "label": "WhatsApp Integration ID" , 
+        "helpText": "Extract if from the URL of your WhatsApp Integration on the Sunshine Conversations dashboard: https://app.smooch.io/apps/<<YOUR APP ID>>/channels/<<YOUR WA INTEGRATION ID>>"  },
+
+      "namespace"    : { "label": "WhatsApp Namespace", 
+        "helpText": "The namespace of your WABA given by Whatsapp or Sunshine Conversations" },
+
+      "templates"    : { "label": "Enabled WA templates", 
+        "helpText": "Input the list of WA templates that you want to enable on ZD Support, separated by commas (no whitespace!)." },
+
+      "language"    : { "label": "Template language", 
+        "helpText": "Language to apply to ALL template (for example en\\_US or pt\\_BR)" },
+
+      "notificationAPI"    : { "label": "Notification API enabled", 
+        "helpText": "Specify if the Sunshine Conversations Notification API is enabled for your account." }
     }
   }
 }
